# bluerange-mesh

./: .cproject  .gdbinit  .gitignore  .project  CHANGELOG.md  CMakeLists.txt  CONTRIBUTE.adoc  CherrySim.sln  CherrySim.vcxproj  CherrySim.vcxproj.filters  LICENCE.txt  Makefile  Makefile.NRF51  Makefile.NRF51822  Makefile.NRF52  Makefile.NRF52832  Makefile.NRF52840  Makefile.local.template  README.adoc  README.md  _Sidebar.adoc  antora.yml  compile.sh  cppcheck.cppcheck.template  flash.sh  gcc_nrf51_s130_32kb.ld  go  makefile  playbook.yml  s120_softdevice.hex  serial.sh  upload.jlink  upload_fruitymesh.jlink
BBERenderer/: BBERenderer.cpp  BBERenderer.h  BBERendererMock.cpp  CMakeLists.txt
BBERenderer/Emscripten/: template.html
BBERenderer/Mock/BBE/: BrotboxEngine.h
cherrysim/: CMakeLists.txt  CherrySim.cpp  CherrySim.h  CherrySimRunner.cpp  CherrySimRunner.h  CherrySimTester.cpp  CherrySimTester.h  CherrySimTypes.cpp  CherrySimTypes.h  CherrySimUtils.cpp  CherrySimUtils.h  Exceptions.cpp  Exceptions.h  FruitySimPipe.cpp  FruitySimServer.cpp  FruitySimServer.h  LICENCE.GPL3-EXCEPT.txt  MersenneTwister.cpp  MersenneTwister.h  MoveAnimation.cpp  MoveAnimation.h  PathLossModel.cpp  PathLossModel.h  SocketTerm.cpp  SocketTerm.h  StackWatcher.cpp  StackWatcher.h  SystemTest.cpp  SystemTest.h  aes.c  ccm_soft.c  ccm_soft.h  dbscan.c  dbscan.h  debugbreak.h  json.hpp  stdafx.cpp
cherrysim/aes-ccm/: CMakeLists.txt  aes-ccm-sw.cpp  aes-ccm.cpp  aes-enc.cpp  aes.h
cherrysim/test/: CMakeLists.txt  HelperFunctions.h  TestAdvertisingModule.cpp  TestBaseConnection.cpp  TestBeaconingModule.cpp  TestChunkedPacketQueue.cpp  TestCircularBuffer.cpp  TestClustering.cpp  TestConnectionQueueMemoryAllocator.cpp  TestDebugModule.cpp  TestEnrollmentModule.cpp  TestIoModule.cpp  TestLogger.cpp  TestMeshAccessModule.cpp  TestModule.cpp  TestModuleIdWrapper.cpp  TestMonkey.cpp  TestMoveAnimations.cpp  TestNode.cpp  TestOther.cpp  TestPacketQueue.cpp  TestRawData.cpp  TestRecordStorage.cpp  TestRecordStorage.h  TestRegisterHandler.cpp  TestRuuviWeatherModule.cpp  TestScanController.cpp  TestScanningModule.cpp  TestServiceDiscovery.cpp  TestSigAccessLayer.cpp  TestSigGenericModels.cpp  TestSigLightModels.cpp  TestSimpleArray.cpp  TestSimulationMessages.cpp  TestStatistics.cpp  TestStatistics.h  TestStatusReporterModule.cpp  TestTerminal.cpp  TestTimeSync.cpp  TestUtility.cpp  (+2 more)
cherrysim/test/res/: MoveAnimation.json  README.adoc
cherrysim/test/res/densenetwork/: devices.json
cherrysim/test/res/github_example/: devices.json  site.json
cherrysim/test/res/horizontalspreadnetwork/: devices.json
cherrysim/test/res/rownetwork/: devices.json
cherrysim/test/res/singlepointfailure/: devices.json
cherrysim/test/res/sparsenetwork/: devices.json  site.json
cherrysim/test/res/starnetwork/: devices.json
cherrysim/web/: README.adoc  fruitymap.js  index.html  pixi.js
config/: Config.h  (+21 more)
src/: Boardconfig.cpp  Boardconfig.h  CMakeLists.txt  Config.cpp  Config.h  FruityMesh.cpp  FruityMesh.h  GlobalState.cpp  GlobalState.h  Main.cpp
src/base/: AdvertisingController.cpp  AdvertisingController.h  FruityHal.cpp  FruityHal.h  FruityHalBleGap.h  FruityHalBleGatt.h  FruityHalBleTypes.h  FruityHalError.h  FruityHalNrf.cpp  FruityHalNrf.h  GAPController.cpp  GAPController.h  GATTController.cpp  GATTController.h  GlobalState.cpp  GlobalState.h  PortFeatures.h  RegisterHandler.cpp  RegisterHandler.h  ScanController.cpp  ScanController.h
src/c/: CMakeLists.txt
src/c/drivers/: CMakeLists.txt  bme280.cpp  bme280.h
src/c/segger_rtt/: CMakeLists.txt  SEGGER_RTT.c  SEGGER_RTT_original.rar  utils.h
src/examples/: AppUartModule.cpp  AppUartModule.h  PingModule.cpp  PingModule.h  TemplateModule.cpp  TemplateModule.h  VendorTemplateModule.cpp  VendorTemplateModule.h
src/hal/: CMakeLists.txt  FruityHal.h  FruityHalBleGap.h  FruityHalBleGatt.h  FruityHalBleTypes.h  FruityHalError.h
src/hal/nrf/: CMakeLists.txt  FruityHalNrf.cpp
src/hal/template/: CMakeLists.txt  FruityHalTemplate.cpp
src/mesh/: AppConnection.cpp  AppConnection.h  BaseConnection.cpp  BaseConnection.h  CMakeLists.txt  Connection.cpp  ConnectionHandle.cpp  ConnectionHandle.h  ConnectionManager.cpp  ConnectionManager.h  FruityMesh.cpp  FruityMesh.h  MeshAccessConnection.cpp  MeshAccessConnection.h  MeshConnection.cpp  MeshConnection.h  Node.cpp  Node.h  ResolverConnection.cpp  ResolverConnection.h
src/modules/: AdvertisingModule.cpp  AdvertisingModule.h  AutoActModule.cpp  AutoActModule.h  AutoSenseModule.cpp  AutoSenseModule.h  BeaconingModule.cpp  BeaconingModule.h  CustomModule.cpp  DFUModule.cpp  DebugModule.cpp  DebugModule.h  EnrollmentModule.cpp  EnrollmentModule.h  GatewayModule.cpp  IoModule.cpp  IoModule.h  MeshAccessModule.cpp  MeshAccessModule.h  Module.cpp  Module.h  PingModule.cpp  RSSIModule.cpp  RuuviWeatherModule.cpp  RuuviWeatherModule.h  ScanningModule.cpp  ScanningModule.h  StatusReporterModule.cpp  StatusReporterModule.h  TestModule.cpp  TestingModule.cpp  TestingModule.h
src/nrf/: simple_uart.c
src/segger_rtt/: SEGGER_RTT.c
src/test/: SystemTest.cpp  TestBattery.cpp  TestBattery.h  TestPacketQueue.cpp  TestRecordStorage.cpp  Testing.cpp
src/types/: AdvertisingMessageTypes.h  CMakeLists.txt  ConnectionMessageTypes.h  FmTypes.h  PrimitiveTypes.h
src/utility/: BitMask.h  ButtonListener.cpp  ChunkedPacketQueue.cpp  ChunkedPacketQueue.h  ChunkedPriorityPacketQueue.cpp  ChunkedPriorityPacketQueue.h  CircularBuffer.h  ComponentSenseTimer.cpp  ComponentSenseTimer.h  ConnectionAllocator.cpp  ConnectionAllocator.h  ConnectionQueueMemoryAllocator.cpp  ConnectionQueueMemoryAllocator.h  DeviceOff.cpp  DeviceOff.h  ErrorLog.cpp  ErrorLog.h  FlashStorage.cpp  FlashStorage.h  LedWrapper.cpp  LedWrapper.h  LogTransport.cpp  Logger.cpp  Logger.h  ModuleAllocator.cpp  ModuleAllocator.h  MultiScheduler.h  NewStorage.cpp  PacketQueue.cpp  PacketQueue.h  RecordStorage.cpp  RecordStorage.h  RingIndexGenerator.cpp  RingIndexGenerator.h  SimpleArray.h  SimpleBuffer.cpp  SimplePushStack.cpp  SimpleQueue.cpp  SimpleQueue.h  SlotStorage.h  (+11 more)
(+1599 files in other folders)
